--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<button id="fillDataButton" (click)="onFillDataClick()">Remplir automatiquement</button>
+<button id="fillDataButton" (click)="onFillDataClick()">Remplir Auto</button>
