--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<button id="fillDataButton" (click)="onFillDataClick()">Remplir Auto</button>
+<app-netvox></app-netvox>
+<app-leocare></app-leocare>
