--- a/src/app/leocare/leocare.component.html
+++ b/src/app/leocare/leocare.component.html
@@ -1,3 +1,3 @@
 <button id="fillDataButton" (click)="onFillDataClick()">Auto Fill leocare</button>
 <h1>hello</h1>
-<h2>ya lamiaaa </h2>
+<h2>yaaaaa</h2>
